23_architectures/arc3/kubernetes/weather/weather-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather
  namespace: aodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weather
      version: 'v1'
  template:
    metadata:
      labels:
        app: weather
        version: 'v1'
    spec:
      containers:
        - name: weather-app
          image: eamonfoy/weather
          resources:
            requests:
              memory: '512Mi'
              cpu: '500m'
            limits:
              memory: '1Gi'
              cpu: '1'
          ports:
            - name: http
              containerPort: 8082
          readinessProbe:
            httpGet:
              path: /management/health
              port: http
            initialDelaySeconds: 20
            periodSeconds: 15
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /management/health
              port: http
            initialDelaySeconds: 120
