23_architectures/arc3/kubernetes/weather/weather-service.yml
apiVersion: v1
kind: Service
metadata:
  name: weather
  namespace: aodb
  labels:
    app: weather
spec:
  selector:
    app: weather
  ports:
    - name: http
      port: 80
      targetPort: 8082
